# uzume_emscripten

./: .gitmodules  CMakeLists.txt  README.md
src/: EstimateF0Bindings.cpp  SpectrogramBindings.cpp  SynthesizeWaveformBindings.cpp  main.cpp
src/data/: ContourBindings.cpp  WaveformBindings.cpp
src/spectrogram/: WaveformSpectrogramBindings.cpp
src/world/: EstimateF0WithDIOBindings.cpp
